Infrastructure/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
  labels:
    app: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      serviceAccountName: portfolio-sa
      containers:
      - name: portfolio
        image: 060399601368.dkr.ecr.eu-west-1.amazonaws.com/eks-project-eu-west-1-sandbox-ecr:latest
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    app: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
